--- a/Tutorial/Exam1/aboutus.html
+++ b/Tutorial/Exam1/aboutus.html
@@ -6,6 +6,27 @@
     <title>About Us</title>
 </head>
 <body>
+     <!-- section 1 - heading -->
+     <table border="0" cellpadding="20" cellspacing="0" width="100%">
+     <tr>
+        <td align="center" width="50%">
+        <h1>About Us</h1>
+        <td align="left" width="20%">
+        <img src="Data/binocular.jpg" height="100" width="100">
+     </td>
+    </tr>
+    </table>
+
+    <!-- Section 2 - Mission-->
+     <table border="0" cellpadding="20" cellspacing="0" width="100%">
+     <tr>
+        <td>
+            <h2> Our Mission</h2>
+
+    <p>is to deliver the news big media ignores raw, unfiltered stories that cut through corporate distractions and hidden agendas. <br> We emposer you to see beyond the manipulation, one truth at a time.</p>
+        </td>
+    </tr>
+    
     
 </body>
 </html>
