--- a/Tutorial/Exam1/contactus.html
+++ b/Tutorial/Exam1/contactus.html
@@ -6,6 +6,49 @@
     <title>Contact Us</title>
 </head>
 <body>
-    
+    <!-- section 1 - heading -->
+     <table border="0" cellpadding="20" cellspacing="0" width="100%">
+     <tr>
+        <td align="center" width="80%">
+        <h1>Contact Us</h1>
+        <td align="left" width="20%">
+        <img src="Data/binocular.jpg" height="100" width="100">
+     </td>
+    </tr>
+    </table>
+
+    <!-- section 2 - contact -->
+    <div align="center">
+     <table border="0" cellpadding="0" cellspacing="0" width="50%">
+        <tr>
+            <td><p>Address</p></td>
+            <td>Phone</td>
+            <td>Fax</td>
+            <td>Email</td>
+        </tr>
+     </table>
+     <table border="0" cellpadding="0" cellspacing="0" width="50%">
+        <tr>
+            <td><p>Broadway St News Delhi</p></td>
+            <td>2323-233-2323</td>
+            <td>230922093</td>
+            <td>overlooked@gmail.com</td>
+        </tr>
+     </table>
+     </div>
+
+     <!-- section 3 - contact form -->
+    <div align="center">
+        <form>
+            <label for="fname">Name</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="email">Email</label><br>
+            <input type="email" id="email" name="email"><br>
+            <label for="text">comment</label><br>
+            <textarea id="text" name="text" rows="4" cols="50"></textarea><br><br>
+            
+            <input type="submit" onclick="alert('Comment Submitted successfully')" value="Submit">
+        </form>
+    </div>
 </body>
 </html>
