--- a/Tutorial/Exam1/contactus.html
+++ b/Tutorial/Exam1/contactus.html
@@ -16,6 +16,7 @@
      </td>
     </tr>
     </table>
+      <a href="index.html">Home</a></td>
 
     <!-- section 2 - contact -->
     <div align="center">
@@ -50,5 +51,8 @@
             <input type="submit" onclick="alert('Comment Submitted successfully')" value="Submit">
         </form>
     </div>
+
+  
+
 </body>
 </html>
