--- a/Tutorial/Exam1/index.html
+++ b/Tutorial/Exam1/index.html
@@ -54,13 +54,13 @@
      <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <tr>
             <td>
-               <a href="News/politics.html"><image src="Data/politics.jpg" height="200" width="200"></image></a>
-                <a href="New/sports.html"><image src="Data/sports.jpg" height="200" width="200"></image></a>
-                <a href="News/business.html"><image src="Data/business.jpg" height="200" width="200"></image></a>
-                <a href="News/entertainment.html"><image src="Data/entertainment.jpg" height="200" width="200"></image></a>
-                <a href="News/tech.html"><image src="Data/tech.jpg" height="200" width="200"></image></a>
-                <a href="News/lifestyle.html"><image src="Data/lifestyle.jpg" height="200" width="200"></image></a>
-                <a href="News/world.html"><image src="Data/world.jpg" height="200" width="200"></image></a>
+                <a href="/Exam1/News/entertainment.html"><image src="Data/entertainment.jpg" height="200" width="200"></image></a>
+                <a href="/Exam1/News/politics.html"><image src="Data/politics.jpg" height="200" width="200"></image></a>
+                <a href="/Exam1/News/sports.html"><image src="Data/sports.jpg" height="200" width="200"></image></a>
+                <a href="/Exam1/News/business.html"><image src="Data/business.jpg" height="200" width="200"></image></a>
+                <a href="/Exam1/News/tech.html"><image src="Data/tech.jpg" height="200" width="200"></image></a>
+                <a href="/Exam1/News/lifestyle.html"><image src="Data/lifestyle.jpg" height="200" width="200"></image></a>
+                <a href="/Exam1/News/world.html"><image src="Data/world.jpg" height="200" width="200"></image></a>
             </td>
             
         </tr>
