--- a/Tutorial/Exam1/contactus.html
+++ b/Tutorial/Exam1/contactus.html
@@ -18,25 +18,6 @@
     </table>
       <a href="index.html">Home</a></td>
 
-    <!-- section 2 - contact -->
-    <div align="center">
-     <table border="0" cellpadding="0" cellspacing="0" width="50%">
-        <tr>
-            <td><p>Address</p></td>
-            <td>Phone</td>
-            <td>Fax</td>
-            <td>Email</td>
-        </tr>
-     </table>
-     <table border="0" cellpadding="0" cellspacing="0" width="50%">
-        <tr>
-            <td><p>Broadway St News Delhi</p></td>
-            <td>2323-233-2323</td>
-            <td>230922093</td>
-            <td>overlooked@gmail.com</td>
-        </tr>
-     </table>
-     </div>
 
      <!-- section 3 - contact form -->
     <div align="center">
@@ -44,7 +25,15 @@
             <label for="fname">Name</label><br>
             <input type="text" id="fname" name="fname"><br>
             <label for="email">Email</label><br>
-            <input type="email" id="email" name="email"><br>
+            <input type="email" id="email" name="email"><br><br>
+            <label for="category">Type of Comment</label>
+            <select id="category" name="category">
+                <option value="Sales">Sales</option>
+                <option value="Service">Service</option>
+                <option value="Enquiry">Enquiry</option>
+                <option value="Advertisment">Advertisment</option>
+                <option value="Complaint">Complaint</option>
+            </select><br>
             <label for="text">comment</label><br>
             <textarea id="text" name="text" rows="4" cols="50"></textarea><br><br>
             
