--- a/Tutorial/Exam1/contactus.html
+++ b/Tutorial/Exam1/contactus.html
@@ -25,8 +25,8 @@
         <form>
             <label for="fname">Name</label><br>
             <input type="text" id="fname" name="fname"><br>
-            <label for="email">Email</label><br>
-            <input type="email" id="email" name="email"><br><br>
+            <label for="mob">Mobile</label><br>
+            <input type="mob" id="mob" name="mob"><br><br>
             <label for="category">Type of Comment</label>
             <select id="category" name="category">
                 <option value="Sales">Sales</option>
