--- a/Tutorial/Exam1/contactus.html
+++ b/Tutorial/Exam1/contactus.html
@@ -36,7 +36,7 @@
                 <option value="Complaint">Complaint</option>
             </select><br>
             <label for="text">comment</label><br>
-            <textarea id="text" name="text" rows="4" cols="50"></textarea><br><br>
+            <textarea id="text" name="text" rows="4" cols="50" placeholder="type here..."></textarea><br><br>
             
             <input type="submit" onclick="alert('Comment Submitted successfully')" value="Submit">
         </form>
