--- a/Tutorial/Exam1/contactus.html
+++ b/Tutorial/Exam1/contactus.html
@@ -24,9 +24,9 @@
     <div align="center">
         <form>
             <label for="fname">Name</label><br>
-            <input type="text" id="fname" name="fname"><br>
+            <input type="text" id="fname" name="fname" placeholder="Enter your name...."><br>
             <label for="mob">Mobile</label><br>
-            <input type="mob" id="mob" name="mob"><br><br>
+            <input type="number" id="mob" name="mob" patter="{0-9}{10}" placeholder="Enter you Mobile Number...."><br><br>
             <label for="category">Type of Comment</label>
             <select id="category" name="category">
                 <option value="Sales">Sales</option>
