--- a/Tutorial/Exam1/index.html
+++ b/Tutorial/Exam1/index.html
@@ -27,15 +27,15 @@
      <table border="0" cellpadding="25" cellspacing="0" width="100%">
         <tr>
             <td><a href="index.html">Home</a></td>
-            <td><a href="News/politics.html">Politics</a></td>
-            <td><a href="News/sports.html">Sports</a></td>
-            <td><a href="News/business.html">Business</a></td>
-            <td><a href="News/entertainment.html">Entertainment</a></td>
-            <td><a href="News/tech.html">Tech</a></td>
-            <td><a href="News/lifestyle.html">Lifestyle</a></td>
-            <td><a href="News/world.html">World</a></td>
-            <td><a href="aboutus.html">About us</a></td>
-            <td><a href="contactus.html">Contact us</a></td>
+            <td><a href="News/politics.html" target="_blank">Politics</a></td>
+            <td><a href="News/sports.html" target="_blank">Sports</a></td>
+            <td><a href="News/business.html" target="_blank">Business</a></td>
+            <td><a href="News/entertainment.html" target="_blank">Entertainment</a></td>
+            <td><a href="News/tech.html" taget="_blank">Tech</a></td>
+            <td><a href="News/lifestyle.html" taget="_blank">Lifestyle</a></td>
+            <td><a href="News/world.html" taget="_blank">World</a></td>
+            <td><a href="aboutus.html" target="_blank">About us</a></td>
+            <td><a href="contactus.html" taget="_blank">Contact us</a></td>
         </tr>
      </table>
   
@@ -50,20 +50,53 @@
         </tr>
      </table>
 
-      <!--Section 4 - Genre News-->
-     <table border="0" cellpadding="0" cellspacing="0" width="100%">
-        <tr>
-            <td>
-                <a href="/Exam1/News/entertainment.html"><image src="Data/entertainment.jpg" height="200" width="200"></image></a>
-                <a href="/Exam1/News/politics.html"><image src="Data/politics.jpg" height="200" width="200"></image></a>
-                <a href="/Exam1/News/sports.html"><image src="Data/sports.jpg" height="200" width="200"></image></a>
-                <a href="/Exam1/News/business.html"><image src="Data/business.jpg" height="200" width="200"></image></a>
-                <a href="/Exam1/News/tech.html"><image src="Data/tech.jpg" height="200" width="200"></image></a>
-                <a href="/Exam1/News/lifestyle.html"><image src="Data/lifestyle.jpg" height="200" width="200"></image></a>
-                <a href="/Exam1/News/world.html"><image src="Data/world.jpg" height="200" width="200"></image></a>
-            </td>
-        </tr>
-     </table>
+     <!--Section 4 - Genre News-->
+     <ul>
+        <li>
+            <dl>
+                <dt><h3>Entertainment</h3></dt>
+                <dd><a href="/Exam1/News/entertainment.html" target="_blank">Jjk Movie dates getting extended.</a></dd>
+            </dl>
+        </li>
+
+           <li>
+            <dl>
+                <dt><h3>Politics</h3></dt>
+                <dd><a href="/Exam1/News/politics.html" target="_blank">Short Parliament session.</a></dd>
+            </dl>
+        </li>
+           <li>
+            <dl>
+                <dt><h3>Business</h3></dt>
+                <dd><a href="/Exam1/News/business.html" target="_blank">Cooperate sector weak growth.</a></dd>
+            </dl>
+        </li>
+           <li>
+            <dl>
+                <dt><h3>Life Style</h3></dt>
+                <dd><a href="/Exam1/News/lifestyle.html" target="_blank">Remote jobs causing micro injuries.</a></dd>
+            </dl>
+        </li>
+           <li>
+            <dl>
+                <dt><h3>tech</h3></dt>
+                <dd><a href="/Exam1/News/tech.html" target="_blank">Gpt 5 turns out be disappointing</a></dd>
+            </dl>
+        </li>
+           <li>
+            <dl>
+                <dt><h3>Sports</h3></dt>
+                <dd><a href="/Exam1/News/sports.html" target="_blank">Messi visit backlash.</a></dd>
+            </dl>
+        </li>
+           <li>
+            <dl>
+                <dt><h3>World</h3></dt>
+                <dd><a href="/Exam1/News/world.html">EU Protest and Backlash.</a></dd>
+            </dl>
+ 
+
+
 
      
 </body>
