--- a/Tutorial/Lab5/homework.html
+++ b/Tutorial/Lab5/homework.html
@@ -16,6 +16,9 @@
             padding:10px 20px;
             height:600px;
             width:fit-content; 
+            max-width:500px;
+            min-width:500px;
+            
 
         }
 
