--- a/Tutorial/Misc/test3.html
+++ b/Tutorial/Misc/test3.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        #box {
-            background-color: brown;
-            
+        #heading {
+            border-style: solid;
+            border-color: black;
+            text-align:center;
+        }
+
+        .navbar {
+            border-style: solid;
+            border-color: black;
+        }
+
+        .navbar ul{
+            list-style-type:none;
+        }
+
+        .navbar a{
+            text-decoration:none;
+        }
+
+        .navbar li {
+            word-spacing: 5px;
+            float:right;
         }
 
     </style>
@@ -14,8 +33,14 @@
     <title>Test 3 </title>
 </head>
 <body>
-    <div id="box">Box</div>
-    <span id="box">Box</span>
-    <i class="fa-solid fa-gift"></i>
+    <h1 id="heading">Heading</h1>
+    <nav class="navbar">
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Products</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
 </body>
 </html>
