--- a/Tutorial/Misc/test4.html
+++ b/Tutorial/Misc/test4.html
@@ -4,26 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        .div2 {
-  width: 300px;
-  height: 100px;
-  padding: 50px;
-  border: 1px solid red;
-  box-sizing: border-box;
-}
 
-.div1 {
-  width: 300px;
-  height: 100px;
-  padding: 50px;
-  border: 1px solid blue;
+      .grid-container {
+        display: grid;
+        grid-template-columns: 20vh 20vh;
+        grid-template-rows: 20vh 20vh;
+        margin:auto;
+        margin-top:100px;
+        border:solid;
+        height:400px;
+        width:400px;
+        
+      }
 
-}
+      .box1 {
+        border:solid;
+        padding:20px;
+        background-color: red;
+        margin:10px;
+
+      }
+
+      .box2 {
+        border:solid;
+        padding:20px;
+        background-color: blue;
+        margin:auto;
+      }
+
+      .box3 {
+        border:solid;
+        padding:50px;
+        background-color: blueviolet;
+
+      }
+
+      .box4 {
+        border:solid;
+        padding:20px;
+        background-color: chartreuse;
+      
+      }
     </style>
     <title>boxsizing</title>
 </head>
 <body>
-    <div class="div1"></div>
-    <div class="div2"></div>
+  <div class="grid-container">
+    <div class="box1">box1</div>
+    <div class="box2">box2</div>
+    <div class="box3">box3</div>
+    <div class="box4">box4</div>
+  </div>
 </body>
 </html>
