--- a/Tutorial/Lab10/classwork.html
+++ b/Tutorial/Lab10/classwork.html
@@ -18,12 +18,12 @@
     <title>Personal Profile</title>
 </head>
 <body>
-    <div class="container-lg d-flex align-items-center justify-content-center min-vh-100" style="border:solid">
-        <div  class="row" style="border:solid">
-            <div class="col-sm-4 col-12 d-flex align-items-center justify-content-center" style="border:solid">
+    <div class="container-lg d-flex align-items-center justify-content-center min-vh-100">
+        <div  class="row">
+            <div class="col-sm-4 col-12 d-flex align-items-center justify-content-center">
                 <img src="/Tutorial/Lab10/data/nick.jpg"height="200px" >
             </div>
-            <div class="col-sm-8 col-12" style="border:solid">
+            <div class="col-sm-8 col-12">
                 <h2>Nicholas Joseph Fuentes</h2>
                 <ul>
                     <li>Title: Far-Right Commentator & Livestreamer</li>
