--- a/Tutorial/Lab10/homework.html
+++ b/Tutorial/Lab10/homework.html
@@ -41,11 +41,15 @@
                 <p>Whether you’re a weary sailor, a fearless pirate, or just hungry for a meal worth remembering, you’re welcome here. Our chefs don’t serve leftovers, and no one leaves starving those are the rules of the Baratie.</p>
                 <p>So take a seat, enjoy the ocean breeze, and let us fill your stomach and your spirit.Just remember wasting food is the greatest crime on this ship. Now then… what’ll it be?</p>
                 <p> — The Baratie Crew ⚓</p>
-
-                
             </div>
         </div>
     </div>
+
+    <footer class="bg-light text-center py-4 mt-5 border-top">
+  <div class="container">
+    <p class="mb-0">© 2026 The Baratie. All rights reserved.</p>
+  </div>
+  </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
